Landing Page: fix css content overflow
when shinking the page, the contents displaying outside the container

--- a/landingpage/styles.css
+++ b/landingpage/styles.css
@@ -11,7 +11,6 @@ body {
     justify-content: space-between;
     padding: 80px;
     padding-top: 0;
-    height: 300px;
 }
 
 /* Header logo and links */
